// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADDED_TODO event can add children at the correct position 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parentId": "id-1",
        "position": 0,
        "title": "Create child 1",
        "todoId": "id-1-1",
      },
      Object {
        "children": Array [],
        "parentId": "id-1",
        "position": 1,
        "title": "Create child 2",
        "todoId": "id-1-2",
      },
    ],
    "position": 0,
    "title": "Create a parent todo",
    "todoId": "id-1",
  },
]
`;

exports[`ADDED_TODO event can add root nodes at the correct position 1`] = `
Array [
  Object {
    "children": Array [],
    "position": 0,
    "title": "Create a parent todo",
    "todoId": "id-1",
  },
  Object {
    "children": Array [],
    "position": 1,
    "title": "Create other parent",
    "todoId": "id-2",
  },
]
`;

exports[`ADDED_TODO event can add todos as children of children 1`] = `
Array [
  Object {
    "children": Array [],
    "position": 0,
    "title": "Create a parent todo",
    "todoId": "id-1",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parentId": "id-3",
            "position": 0,
            "title": "Create a child todo of child of parent 2",
            "todoId": "id-5",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parentId": "id-6",
                "position": 0,
                "title": "Create a child of 2nd child of child of parent 2",
                "todoId": "id-7",
              },
            ],
            "parentId": "id-3",
            "position": 1,
            "title": "Create a second child todo of child of parent 2",
            "todoId": "id-6",
          },
        ],
        "parentId": "id-2",
        "position": 0,
        "title": "Create a child in another parent todo",
        "todoId": "id-3",
      },
    ],
    "position": 1,
    "title": "Create another parent todo",
    "todoId": "id-2",
  },
  Object {
    "children": Array [],
    "position": 2,
    "title": "Create a third parent todo",
    "todoId": "id-4",
  },
]
`;

exports[`ADDED_TODO event can add todos in a more complex example 1`] = `
Array [
  Object {
    "children": Array [],
    "position": 0,
    "title": "Create a parent todo",
    "todoId": "id-1",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parentId": "id-2",
        "position": 0,
        "title": "Create a child in another parent todo",
        "todoId": "id-3",
      },
      Object {
        "children": Array [],
        "parentId": "id-2",
        "position": 1,
        "title": "Create another child todo in parent 2",
        "todoId": "id-5",
      },
    ],
    "position": 1,
    "title": "Create another parent todo",
    "todoId": "id-2",
  },
  Object {
    "children": Array [],
    "position": 2,
    "title": "Create a third parent todo",
    "todoId": "id-4",
  },
]
`;
